chore(SeriesNextAndPrev.astro): update styling of previous and next buttons to use smaller text size chore(SeriesNextAndPrev.astro): update styling of previous and next icons to use smaller text size chore(post.css): update code block styling to have a minimum width of full width to prevent overflow

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -4,7 +4,7 @@
 
 .post code {
   @apply rounded-md bg-black font-semibold px-1 py-[2px] text-orange-500;
-  @apply max-w-[600px] overflow-x-auto;
+  @apply min-w-full max-w-[600px] overflow-x-auto;
 }
 
 .post h1 {
